# LegToy

./: .gitignore  LegToy.sln  Podfile  README.md
Bundle/Base/Showcase/Typeset/: License.txt
Bundle/Base/UI/Description/: BaseFonts.desc.xml  Common.desc.xml  Texture.UI.Patch.desc.xml  Textures.desc.xml
Bundle/Base/UI/Description/Showcase/: BGM.desc.xml  CaseClose.desc.xml  HashTest.desc.xml  MainMenu.desc.xml  Showcase.desc.xml  SoundEffect.desc.xml  Typesetting.desc.xml  UIExample.desc.xml  WebView.desc.xml
Bundle/Base/UI/Font/: license_info.txt
Bundle/Base/UI/Texture/: ui_texture.atlas.xml
LegToy.xcodeproj/: project.pbxproj
LegToy.xcodeproj/xcshareddata/xcschemes/: LegToy.xcscheme
LegToy.xcworkspace/: contents.xcworkspacedata
Sources/App/LegToy.Android/: AndroidManifest.xml  LegToy.Android.vcxproj  LegToy.Android.vcxproj.filters  LegToyAndroidSetting.h  nsight_tegra_build_overrides.gradle  settings.gradle
Sources/App/LegToy.Android/app/: build.gradle
Sources/App/LegToy.Android/app/src/main/: AndroidManifest.xml
Sources/App/LegToy.Android/app/src/main/cpp/: CMakeLists.txt  LegToyAndroidSetting.cpp
Sources/App/LegToy.Android/app/src/main/cpp/jni/: Android.cpp
Sources/App/LegToy.Android/gradle/wrapper/: gradle-wrapper.properties
Sources/App/LegToy.Android/src/com/leggiero/Engine/: LeggieroProjectSetting.java
Sources/App/LegToy.Android/src/com/leggiero/LegToy/: LegToyApplication.java
Sources/App/LegToy.WinPC/: LegToy.WinPC.vcxproj  LegToy.WinPC.vcxproj.filters  LegToyWinPCSetting.cpp  LegToyWinPCSetting.h  WinPCMain.cpp
Sources/App/LegToy.iOS/: AppDelegate.h  AppDelegate.mm  GameViewController.h  GameViewController.mm  Info.plist  LaunchScreen.storyboard  LegToyiOSSetting.h  LegToyiOSSetting.mm  main.mm
Sources/App/LegToy.iOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
Sources/LegToy/: CMakeLists.txt  CreateGame.cpp  Game.cpp  Game.h  GameModules.cpp  LegToy.vcxproj  LegToy.vcxproj.filters
Sources/LegToy/Common/: BackgroundRenderer.cpp  BackgroundRenderer.h  IResource_CommonRendering.h  IResource_UI.h  SharedResources.cpp  SharedResources.h
Sources/LegToy/LegToy.Game.xcodeproj/: project.pbxproj
Sources/LegToy/Scene/: Game_Scenes.cpp  SceneIds.h
Sources/LegToy/Scene/InitialLoadingScene/: InitialLoadingScene.cpp  InitialLoadingScene.h  LoadingMarker.cpp  LoadingMarker.h
Sources/LegToy/Scene/ShowcaseScene/: CubeSpace.cpp  CubeSpace.h  ShowcaseBGMController.cpp  ShowcaseBGMController.h  ShowcaseControllerBase.cpp  ShowcaseControllerBase.h  ShowcaseHashController.cpp  ShowcaseHashController.h  ShowcaseLoadingTasks.cpp  ShowcaseLoadingTasks.h  ShowcaseLogicCenter.cpp  ShowcaseLogicCenter.h  ShowcaseMainMenuController.cpp  ShowcaseMainMenuController.h  ShowcaseScene.cpp  ShowcaseScene.h  ShowcaseSoundEffectController.cpp  ShowcaseSoundEffectController.h  ShowcaseTypesetController.cpp  ShowcaseTypesetController.h  ShowcaseUIExampleController.cpp  ShowcaseUIExampleController.h  ShowcaseWebViewController.cpp  ShowcaseWebViewController.h
(+3 files in other folders)
